--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,16 @@
       <!-- ----------------------------------------------------------------------- -->
       <!--                                 NAV-BAR                                 -->
       <!-- ----------------------------------------------------------------------- -->
-      <div class="nav-container"></div>
+      <div class="nav-container">
+        <div class="nav-wrap">
+          <div class="logo">Header Logo</div>
+          <ul class="links-wrap">
+            <li class="link"><a href="google.com">header link one</a></li>
+            <li class="link"><a href="google.com">header link two</a></li>
+            <li class="link"><a href="google.com">header link three</a></li>
+          </ul>
+        </div>
+      </div>
       <!-- ----------------------------------------------------------------------- -->
       <!--                                 HEADER                                  -->
       <!-- ----------------------------------------------------------------------- -->
