Add _HEADER_ Section

--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,22 @@
       <!-- ----------------------------------------------------------------------- -->
       <!--                                 HEADER                                  -->
       <!-- ----------------------------------------------------------------------- -->
-      <div class="header-container"></div>
+      <div class="header-container">
+        <div class="header-wrap">
+          <div class="left-wrap">
+            <h1 class="header-h1">This website is awesome</h1>
+            <p class="header-p">
+              This website has some subtext that goes here under the main title.
+              It's a smaller font and the color is lower contrast
+            </p>
+            <button class="header-button">Sign up</button>
+          </div>
+          <div class="right-wrap">
+            <div class="header-img">this is a placeholder for an image</div>
+          </div>
+        </div>
+      </div>
+
       <!-- ----------------------------------------------------------------------- -->
       <!--                                  INFO                                   -->
       <!-- ----------------------------------------------------------------------- -->
