--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,37 @@
       <!-- ----------------------------------------------------------------------- -->
       <!--                                  INFO                                   -->
       <!-- ----------------------------------------------------------------------- -->
-      <div class="info-container"></div>
+      <div class="info-container">
+        <div class="info-wrap">
+          <p class="info-p">Some random information.</p>
+          <div class="box-wrap">
+            <div class="item-wrap">
+              <div class="box"></div>
+              <p class="box-p">
+                this is some subtext under an illustration or image
+              </p>
+            </div>
+            <div class="item-wrap">
+              <div class="box"></div>
+              <p class="box-p">
+                this is some subtext under an illustration or image
+              </p>
+            </div>
+            <div class="item-wrap">
+              <div class="box"></div>
+              <p class="box-p">
+                this is some subtext under an illustration or image
+              </p>
+            </div>
+            <div class="item-wrap">
+              <div class="box"></div>
+              <p class="box-p">
+                this is some subtext under an illustration or image
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
       <!-- ----------------------------------------------------------------------- -->
       <!--                                  QUOTE                                  -->
       <!-- ----------------------------------------------------------------------- -->
