--- a/src/index.html
+++ b/src/index.html
@@ -77,7 +77,16 @@
       <!-- ----------------------------------------------------------------------- -->
       <!--                                  QUOTE                                  -->
       <!-- ----------------------------------------------------------------------- -->
-      <div class="quote-container"></div>
+      <div class="quote-container">
+        <div class="quote-wrap">
+          <p class="quote">
+            This is an inspiring quote, or a testimonial from a customer. Maybe
+            it's just filling up space, or maybe people will actually read it.
+            Who knows? All I know is that is looks nice.
+          </p>
+          <p class="author">-Thor, God of Tunder</p>
+        </div>
+      </div>
       <!-- ----------------------------------------------------------------------- -->
       <!--                                 SIGN-UP                                 -->
       <!-- ----------------------------------------------------------------------- -->
