Add _SIGN-UP_ Section

--- a/src/index.html
+++ b/src/index.html
@@ -90,7 +90,19 @@
       <!-- ----------------------------------------------------------------------- -->
       <!--                                 SIGN-UP                                 -->
       <!-- ----------------------------------------------------------------------- -->
-      <div class="signup-container"></div>
+      <div class="signup-container">
+        <div class="signup-wrap">
+          <div class="signup-left">
+            <p class="p1">Call to action! It's time!</p>
+            <p class="p2">
+              Sign up for our product by clicking that button right over there!
+            </p>
+          </div>
+          <div class="signup-right">
+            <button class="sign-button">Sign up</button>
+          </div>
+        </div>
+      </div>
       <!-- ----------------------------------------------------------------------- -->
       <!--                                 FOOTER                                  -->
       <!-- ----------------------------------------------------------------------- -->
