Add _FOOTER_ Section

--- a/src/index.html
+++ b/src/index.html
@@ -106,7 +106,13 @@
       <!-- ----------------------------------------------------------------------- -->
       <!--                                 FOOTER                                  -->
       <!-- ----------------------------------------------------------------------- -->
-      <div class="footer-container"></div>
+      <div class="footer-container">
+        <div class="footer-wrap">
+          <p class="copyright">
+            Copyright <span class="symbol">©</span> The Odin Project 2021
+          </p>
+        </div>
+      </div>
     </div>
   </body>
 </html>
